Added changes after a code review.