@@ -4,6 +4,7 @@ import com.example.animalshelter.model.Animal;
 import com.example.animalshelter.model.AnimalGender;
 import com.example.animalshelter.model.AnimalHealthStatus;
 import com.example.animalshelter.model.AnimalType;
+import com.example.animalshelter.service.AnimalNotFoundException;
 import com.example.animalshelter.service.AnimalService;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import org.assertj.core.api.Assertions;
@@ -23,6 +24,8 @@ import java.util.List;
 import java.util.Objects;
 
 import static org.assertj.core.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.result.MockMvcResultHandlers.print;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
@@ -40,8 +43,20 @@ public class AnimalControllerIT {
     private MockMvc mockMvc;
 
     private final Animal dummyAnimal = createAnimal();
+    private final Animal secondDummyAnimal = createSecondAnimal();
 
     private Animal createAnimal() {
+        Animal dummyAnimal = new Animal();
+        dummyAnimal.setId(4321);
+        dummyAnimal.setAge(3);
+        dummyAnimal.setGender(AnimalGender.MALE);
+        dummyAnimal.setHealthStatus(AnimalHealthStatus.HEALTHY);
+        dummyAnimal.setName("Alex");
+        dummyAnimal.setType(AnimalType.DOG);
+        return dummyAnimal;
+    }
+
+    private Animal createSecondAnimal() {
         Animal dummyAnimal = new Animal();
         dummyAnimal.setId(4321);
         dummyAnimal.setAge(3);
@@ -84,15 +99,17 @@ public class AnimalControllerIT {
 
     @Test
     public void shouldReturnStatusIsOkAndAnimalObjectList() throws Exception {
-        List<Animal> animals = Collections.singletonList(dummyAnimal);
+        List<Animal> animals = List.of(dummyAnimal, secondDummyAnimal);
         animalController.addAnimal(dummyAnimal);
+        animalController.addAnimal(secondDummyAnimal);
         String animal = new ObjectMapper().writeValueAsString(animals);
 
         this.mockMvc.perform(
                 get("/animals")
                         .contentType(MediaType.APPLICATION_JSON))
                 .andDo(print())
-                .andExpect(content().string(animal));
+                .andExpect(content().string(animal))
+                .andExpect(status().isOk());
     }
 
     @Test
@@ -115,6 +132,8 @@ public class AnimalControllerIT {
                 get("/animals/1")
                         .contentType(MediaType.APPLICATION_JSON))
                 .andDo(print())
-                .andExpect(status().isNotFound());
+                .andExpect(status().isNotFound())
+                .andExpect(result -> assertTrue(result.getResolvedException() instanceof AnimalNotFoundException))
+                .andExpect(result -> assertEquals("Could not find the animal with id: 1.", Objects.requireNonNull(result.getResolvedException()).getMessage()));
     }
 }
